--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -57,6 +57,24 @@ text-align: right;
   flex-direction: column;
   margin: 20px;
   img {
-    max-height: 360px;
+    min-height: 300px;
+    max-height: 300px;
+    object-fit: cover;
   }
+}
+.card-dashboard-center.card-add-garden {
+  border: solid #1bdd87 10px;
+  justify-content: center;
+}
+a.btn.btn-flat.btn-add.btn-add-in-card {
+  background: white;
+  color: #1bdd87;
+  font-size: 100px;
+  width: 100%;
+  height: 100%;
+  margin: 0 !important;
+  display: flex;
+  padding: 0 !important;
+  justify-content: center;
+  align-items: center;
 }
