--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -64,14 +64,14 @@
           </div>
           <div class="card-garden-right px-3">
             <h6>Capacité : <%= booking.garden.capacity %></h6>
-            <h2 class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /hour</h2>
+            <h2 class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /heure</h2>
           </div>
+             <p> <br> <%= link_to "contacter le propriétaire", garden_booking_room_path(booking.id, booking.room.id, booking.room.id),  :class => 'btn btn-flat w-100' %> </p>
           <div class="d-flex justify-content-center">
             <%= link_to "Demande d'annulation",
                 garden_booking_path(booking.garden, booking), :class => 'btn btn-flat w-100',
                 data: {turbo_method: :delete, turbo_confirm: "êtes vous sûr de vouloir annuler cette réservation?"}
                 %>
-            <br> <p> <%= link_to "contacter le propriétaire", garden_booking_room_path(booking.id, booking.room.id, booking.room.id),  :class => 'btn btn-flat w-100 %> </p>
 
         </div>
       </div>
@@ -95,8 +95,8 @@
             <p><%= booking.garden.town%></p>
           </div>
           <div class="card-garden-right">
-            <h6>Capacity : <%= booking.garden.capacity %></h6>
-            <h2 class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /hour</h2>
+            <h6>Capacité : <%= booking.garden.capacity %></h6>
+            <h2 class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /heure</h2>
               <%= simple_form_for [booking.garden, @review] do |f| %>
                 <%= f.input :content, label: "Commentaire :"%>
                 <%= f.input :rating, label: "Note :" %>
@@ -108,10 +108,3 @@
     <% end %>
     </div>
 </div>
-
-<% @bookings.each do |booking| %>
-  <%= link_to "contacter le propriétaire", garden_booking_room_path(booking.id, booking.room.id, booking.room.id) %>
-<% end %>
-<h1>
-
-</h1>
