--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -7,9 +7,9 @@
     <%= text_field_tag :query,
     params[:query],
     class: "form-control",
-    placeholder: "Recherche ton jardin idéal"
+    placeholder: "Recherche ton jardin idéal par mot clé ou ville"
     %>
-    <%= submit_tag "Search", class: "btn btn-primary" %>
+    <%= submit_tag "Rechercher", class: "btn btn-dark" %>
     <% end %>
   </div>
 </div>
