--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     class: "form-control",
     placeholder: "Recherche ton jardin idéal par mot clé ou ville"
     %>
-    <%= submit_tag "Search", class: "btn btn-primary" %>
+    <%= submit_tag "Rechercher", class: "btn btn-dark" %>
     <% end %>
   </div>
 </div>
