--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -57,8 +57,8 @@ text-align: right;
   flex-direction: column;
   margin: 20px;
   img {
-    min-height: 300px;
-    max-height: 300px;
+    max-height: 200px;
+    max-width: 250px;
     object-fit: cover;
   }
 }
