--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -14,15 +14,14 @@
           <% else %>
             <%= cl_image_tag garden.photos.first.key %>
           <% end %>
-
           <div class="card-garden-infos card-garden-infos-dashboard w-100">
             <div class="card-garden-left px-3">
               <h2><%= garden.title %></h2>
               <p><%= garden.town%></p>
             </div>
             <div class="card-garden-right">
-              <h6>Capacité : <%= garden.capacity %></h6>
-              <h2 class="card-garden-pricing"><%= garden.price_per_hour %>€ /heure</h2>
+              <p>Capacité : <%= garden.capacity %></p>
+              <p class="card-garden-pricing"><%= garden.price_per_hour %>€ /heure</p>
               <div class="d-flex justify-content-between">
                 <%= link_to "Modifier",  edit_garden_path(garden), :class => 'btn btn-flat' %>
                 <br>
@@ -30,24 +29,16 @@
                   garden_path(garden), :class => 'btn btn-flat',
                   data: {turbo_method: :delete, turbo_confirm: "êtes vous sûr de vouloir supprimer ce jardin?"}%>
               </div>
-
             </div>
-
           </div>
         </div>
       <% end %>
       <div class="card-dashboard-center card-add-garden">
-          <%= link_to "+",  new_garden_path, class: "btn btn-flat btn-add btn-add-in-card" %>
+        <%= link_to "+",  new_garden_path, class: "btn btn-flat btn-add btn-add-in-card" %>
       </div>
     </div>
-    <br>
-    <br>
 
-
-
-  <br>
-  <br>
-  <h2 class="dash_titles"> Mes réservations à venir </h2>
+  <h2 class="dash_titles mt-4"> Mes réservations à venir </h2>
 
   <div class="container d-flex flex-wrap">
   <% @next_bookings.each do |booking| %>
@@ -63,20 +54,20 @@
             <p><%= booking.garden.town%></p>
           </div>
           <div class="card-garden-right px-3">
-            <h6>Capacité : <%= booking.garden.capacity %></h6>
-            <h2 class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /heure</h2>
+            <p>Capacité : <%= booking.garden.capacity %></p>
+            <p class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /heure</p>
             <% if booking.status %>
               <p>Status : Validée</p>
             <% else %>
               <p>Status : En attente</p>
             <% end %>
           </div>
-          <p> <br> <%= link_to "contacter le propriétaire", garden_booking_room_path(booking.id, booking.room.id, booking.room.id),  :class => 'btn btn-flat w-100' %> </p>
+          <p class="mt-5"> <%= link_to "contacter le propriétaire", garden_booking_room_path(booking.id, booking.room.id, booking.room.id),  :class => 'btn btn-flat w-100' %> </p>
           <div class="d-flex justify-content-center">
             <%= link_to "Demande d'annulation",
-                garden_booking_path(booking.garden, booking), :class => 'btn btn-flat w-100',
-                data: {turbo_method: :delete, turbo_confirm: "êtes vous sûr de vouloir annuler cette réservation?"}
-                %>
+              garden_booking_path(booking.garden, booking), :class => 'btn btn-flat w-100',
+              data: {turbo_method: :delete, turbo_confirm: "êtes vous sûr de vouloir annuler cette réservation?"}
+              %>
           </div>
         </div>
       </div>
@@ -100,16 +91,16 @@
             <p><%= booking.garden.town%></p>
           </div>
           <div class="card-garden-right">
-            <h6>Capacité : <%= booking.garden.capacity %></h6>
-            <h2 class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /heure</h2>
-              <%= simple_form_for [booking.garden, @review] do |f| %>
-                <%= f.input :content, label: "Commentaire :"%>
-                <%= f.input :rating, label: "Note :" %>
-                <%= f.submit "Notez votre hôte", class: "btn btn-flat w-100" %>
-              <% end %>
+            <p>Capacité : <%= booking.garden.capacity %></p>
+            <p class="card-garden-pricing"><%= booking.garden.price_per_hour %>€ /heure</p>
+            <%= simple_form_for [booking.garden, @review] do |f| %>
+              <%= f.input :content, label: "Commentaire :"%>
+              <%= f.input :rating, label: "Note :" %>
+              <%= f.submit "Notez votre hôte", class: "btn btn-flat w-100" %>
+            <% end %>
           </div>
         </div>
       </div>
     <% end %>
-    </div>
+  </div>
 </div>
