--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -31,13 +31,13 @@
   .cards{
     display: grid;
     grid-template-columns:  1fr 1fr 1fr 1fr;
-    grid-gap: 16px;
+    grid-gap: 45px;
   }
 }
 
 .card-garden {
-  height: 240px;
-  width: 200px;
+  height: 330px;
+  width: 280px;
   margin-top: 10px;
   overflow: hidden;
   background: white;
@@ -47,8 +47,8 @@
 }
 
 .card-resa {
-  height: 330px;
-  width: 200px;
+  height: 385px;
+  width: 280px;
   margin-top: 10px;
   overflow: hidden;
   background: white;
@@ -66,8 +66,8 @@
 }
 
 .img-garden {
-  height: 150px;
-  width: 215px;
+  height: 200px;
+  width: 280px;
   object-fit: cover;
 
 }
@@ -80,8 +80,9 @@ a {
 // card to add garden in dashboard
 
 .card-dashboard-center {
-  height: 240px;
-  width: 200px;
+  height: 330px;
+  width: 250px;
+  margin-top: 10px;
 }
 
 .card-dashboard-center.card-add-garden {
