--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,19 +17,14 @@
     <% @gardens.last(12).each do |garden| %>
       <div class="card-garden">
       <%= link_to garden_path(garden) do %>
-
       <% if garden.photos.empty? %>
         <%= image_tag "garden_one", class:"img-garden " %>
       <% else %>
         <%= cl_image_tag garden.photos.first.key, class:"img-garden" %>
       <% end %>
-
-      <div class="card-garden-infos mt-3 card-garden-left px-2">
-        <h3><%= garden.title %></h3>
-        <p><%= garden.town %></p>
-      </div>
-
-      <div class="card-garden-right px-3">
+      <h3 class="text-center my-2"><%= garden.title %></h3>
+      <p class="mx-1"><%= garden.town %></p>
+      <div class="d-flex justify-content-between mx-1">
         <p>Capacité : <%= garden.capacity %></p>
         <p class="card-garden-pricing"><%= garden.price_per_hour %>€ /heure</p>
       </div>
